# MPC_OWASP_POC

./: README.md  action.yml  mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: auto-remediation.yml  owasp-top10.yml
mcp/: __init__.py  llm_client.py  pipeline.py  prompt_builder.py  remediation.py  scan_parser.py  server.py
mcp/cli/: __init__.py  auto_refactor.py
mpc_owasp/: github_client.py  patch_generator.py  prompt_builder.py
scripts/: __init__.py  auto_refactor.py  build_security_summary.py  deploy_colab_ngrok.py  evaluate_inspect.py  evaluate_semgrep.py
semgrep/: owasp-top10.yml
tests/: conftest.py  test_auto_refactor.py  test_server.py
