[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-owasp-poc"
version = "0.1.0"
description = "Model-driven code patching utilities for OWASP remediation"
readme = "README.md"
authors = [{ name = "MCP Maintainers" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/example/mcp-owasp-poc"

[project.scripts]
mcp-auto-refactor = "mcp.cli.auto_refactor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp*"]
